# SoleStormCatPY

./: LICENSE  README.md  SECURITY.md  pyproject.toml
Releases/Python/Consumer App/: SoleStormCatPYApp.py
Releases/Python/Installer/: SoleStormCatPYinstaller.py
Update Patch Notes/: SoleStormCatPYV0.6.2024.md
Wiki/Installation/: PythonInstallation.md  SoleStormCatPYInstallation.md
Wiki/SoleStormCatPY Apps/: ClockTimer.md  Files.md  GreeNotes.md  MathSolver.md  SystemInfo.md  Terminal.md  UnixTimeConvertor.md  WebOpen.md  appOpener.md  interactiveShell.md
src/SoleStormCatPY/: ClockTimer.py  ClockTimerGUI.py  GreeNotes.py  MathSolver.py  ModuleInstaller.py  MyEmailClient.py  SoleStormCatPYApp.py  SystemInfo.py  Terminal.py  TerminalGUI.py  WebCMD.py  WebGUI.py  WebOpen.py  __init__.py  appOpener.py  files.py  interactiveShell.py  sscPyStandalone.py  terminal.py  unixtimecon.py
